...
                android:text="@string/option_copy_file_title"
                android:layout_marginTop="0dp"/>
            <LinearLayout style="@style/LayoutWrapContentMargin20horizontal"
                android:layout_height="wrap_content"
                android:id="@+id/ll_copy_file">
                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/chk_copy_file"
                    style="@style/OptionCheckBox"/>
                <TextView style="@style/OptionCheckBoxText"
                    android:text="@string/option_copy_file_text"/>
            </LinearLayout>
            <TextView
                style="@style/OptionSubTitle"
...
                style="@style/LinearLayoutOptionsCheckBoxHorizontal">
                <TextView style="@style/OptionCheckBoxText"
                    android:text="@string/option_download_user_title"
                    android:layout_width="135dp"
                    />
                <Spinner
                    android:id="@+id/spinner_download_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dropdown"
                    style="@style/Spinner" />
            </LinearLayout>

...
                <TextView style="@style/OptionCheckBoxText"
                    android:text="@string/option_font_family"
                    android:layout_width="80dp"
                    />

                <Spinner
                    android:id="@+id/sp_font_family"
                    android:spinnerMode="dropdown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Spinner" />
            </LinearLayout>

...
                <TextView
                    style="@style/OptionTitle"
                    android:text="@string/option_automotive_title" />
                <LinearLayout android:id="@+id/ll_automotive_on"
                    style="@style/LinearLayoutOptionsCheckBoxHorizontal">
                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:id="@+id/chk_automotive_on"
                        style="@style/OptionCheckBox"/>
                    <TextView
                        style="@style/OptionCheckBoxText"
                        android:text="@string/option_automotive_on" />
                </LinearLayout>
                <LinearLayout android:id="@+id/ll_automotive_auto_resume_on_car_connect"
...
