...
        <LinearLayout style="@style/SettingsGroupCardContent">
            <TextView
                style="@style/SettingsGroupTitle"
                android:text="@string/option_timeBeforeSleep" />

            <com.driot.bookplayer.views.SettingsNumberField
                android:id="@+id/field_time_before_sleep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:beforeText="@string/option_timeBeforeSleep_text"
                app:afterText="@string/min." />

            <TextView android:text="Min = 1" style="@style/OptionMiniText" />
...
                style="@style/LinearLayoutOptionsCheckBoxHorizontal">
                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/chk_open_play_activity"
                    style="@style/OptionCheckBox" />
                <TextView
                    style="@style/OptionCheckBoxText"
                    android:text="@string/option_open_play_activity" />
            </LinearLayout>
        </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <!-- Play view -->
        <com.google.android.material.card.MaterialCardView style="@style/SettingsGroupCard">
...
